Fix download of Google Java Format tool
See https://github.com/google/google-java-format/issues/538

Fixes #223